--- a/CleanArchMvc.WebUI/Views/_ViewImports.cshtml
+++ b/CleanArchMvc.WebUI/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using CleanArchMvc.WebUI
-@using CleanArchMvc.WebUI.Models
+﻿@using CleanArchMvc.WebUI;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
