--- a/CleanArchMvc.WebUI/Views/Categories/Index.cshtml
+++ b/CleanArchMvc.WebUI/Views/Categories/Index.cshtml
@@ -19,7 +19,7 @@
         <div>
             <div class="pull-left">
                 <a asp-action="Create" class="btn btn-primary">
-                    <span title="Register New" class="fas fa-plus"</span> Register New
+                    <span title="Register New" class="fas fa-plus"></span> Register New
                 </a>
             </div>
         </div>
